[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | tests/test_resources/fixtures  # custom formatted files used in tests
)
'''
