[build-system]
requires = [
  "setuptools>=30.3.0",
  "wheel",
]
build-backend = 'setuptools.build_meta'

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | tests/test_resources/fixtures  # custom formatted files used in tests
)
'''
