[metadata]
name = docconvert
version = 2.0.0
description = Convert and conform package docstrings to a new style
long_description = file: README.md
long_description_content_type = text/markdown
keywords = docstrings, convert-docstrings, formatter
license = BSD 3-Clause License
license_files = LICENSE.md
url = https://github.com/cbillingham/docconvert
project_urls=
    Documentation = https://docconvert.readthedocs.io/
    Changelog = https://docconvert.readthedocs.io/en/stable/release_notes.html
    Issue Tracker = https://github.com/cbillingham/docconvert/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages=find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
install_requires =
    six
    enum34;python_version<"3.4"
tests_require =
    pytest

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    tox
    pre-commit
doc =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    docconvert = docconvert.cli:run

[bdist_wheel]
universal=1

[flake8]
# flake 8 configuration for black
max-line-length = 88
select = C,E,F,W,B
ignore = E501,W503,E203
